@@ -1,3 +1,8 @@
+revision 52 - 20100801                                      |
+QSpeedTest:                                                 |
+  * Fixed bug causing immediate crash on Linux x86_64 when  |
+    opening Preferences window                              |
+
 revision 51 - 20100801                                      |
 libspeedtest:                                               |
   * Fixed bug (finally!) causing failed hostlist updates    |
